--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -40,6 +40,7 @@ SYSCOIN_TESTS =\
   test/syscoin_cert_tests.cpp \
   test/syscoin_escrow_tests.cpp \
   test/syscoin_asset_tests.cpp \
+  test/syscoin_asset_allocation_tests.cpp \
   test/test_syscoin_services.cpp \
   test/test_syscoin_services.h \
   test/auxpow_tests.cpp \
